--- a/html.css
+++ b/html.css
@@ -1,15 +1,31 @@
 h1 {
     font-size: 45px;
 }
-.block {
-    width: 100%;
-}
-div {
-    width: 66%;
+.foto  {
+    margin: 0 50px;
+    border-radius: 50%;
+} 
+
+.mainblock {
+    display: flex;
 }
 .block {
     display: flex;
+    width: 100%;
+    height: 100px; 
+    align-items: center;
+}
+div {
+    width: 66%;
+   
 }
 h2 {
-    width: 33%;
+    font-size: 18px;
+    width: 15%;
+    margin-left: 30px;
+}
+.infoblock {
+    display: flex;
+    width: 66%;
+    flex-direction: row;
 }
